--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,7 @@ default: &default
 
 development:
   <<: *default
-  database: shopify_hotwire_sample_development
+  database: profiteer22_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: shopify_hotwire_sample_test
+  database: profiteer22_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -73,14 +73,14 @@ test:
 # the values provided in this file. Alternatively, you can specify a connection
 # URL environment variable explicitly:
 #
-#   production:
-#     url: <%= ENV['MY_APP_DATABASE_URL'] %>
+production:
+  url: <%= ENV['DATABASE_URL'] %>
 #
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
-production:
-  <<: *default
-  database: shopify_hotwire_sample_production
-  username: shopify_hotwire_sample
-  password: <%= ENV['SHOPIFY_HOTWIRE_SAMPLE_DATABASE_PASSWORD'] %>
+# production:
+#   <<: *default
+#   database: shopify_hotwire_sample_production
+#   username: shopify_hotwire_sample
+#   password: <%= ENV['SHOPIFY_HOTWIRE_SAMPLE_DATABASE_PASSWORD'] %>
