--- a/package.json
+++ b/package.json
@@ -2,20 +2,20 @@
   "name": "shopify-hotwire-sample",
   "private": true,
   "scripts": {
-    "build": "esbuild app/javascript/*.* --bundle --sourcemap --outdir=app/assets/builds",
+    "build": "esbuild app/javascript/*.* --bundle --outdir=app/assets/builds",
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css"
   },
   "dependencies": {
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo-rails": "^7.0.1",
-    "@rails/request.js": "^0.0.5",
+    "@rails/request.js": "^0.0.6",
     "@shopify/app-bridge-utils": "^2.0.5",
     "autoprefixer": "^10.4.0",
     "dotenv": "^10.0.0",
     "esbuild": "^0.13.10",
-    "polaris-view-components": "^0.5.0",
+    "polaris-view-components": "^0.9.0",
     "postcss": "^8.4.4",
-    "tailwindcss": "^3.0.1"
+    "tailwindcss": "^3.0.23"
   },
   "version": "0.1.0",
   "devDependencies": {}
