--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,32 +1,29 @@
 # .rubocop.yml
-inherit_mode:
-  merge:
-    - Exclude
 
 require:
-  - rubocop-performance
-  - standard/cop/semantic_blocks
-  - ./lib/cops/lint/env.rb
+  - standard
+  - rubocop-rails
+  - rubocop-rspec
 
 inherit_gem:
   standard: config/base.yml
 
-inherit_from:
-  - .rubocop_rails.yml
-  - .rubocop_rspec.yml
-  - .rubocop_strict.yml
-
-Lint/Env:
-  Enabled: true
-  Include:
-    - '**/*.rb'
+AllCops:
+  NewCops: enable
   Exclude:
-    - '**/config/environments/**/*'
-    - '**/config/application.rb'
-    - '**/config/environment.rb'
-    - '**/config/puma.rb'
-    - '**/config/boot.rb'
-    - '**/spec/*_helper.rb'
-    - '**/spec/**/support/**/*'
-    - 'lib/generators/**/*'
-    - README.md
+    - node_modules/**/*
+    - public/**/*
+    - vendor/**/*
+
+Rails:
+  Enabled: true # enable rubocop-rails cops
+RSpec:
+  Enabled: true # enable rubocop-rspec cops
+RSpec/DescribeClass:
+  Enabled: false # ignore missing comments on classes
+Bundler/DuplicatedGem:
+  Enabled: false # ignore duplicated gem errors because we will have duplicated gems when dual booting
+
+inherit_mode:
+  merge:
+    - Exclude
